tests/basic/pos/ReflExt05A.hs
-- | some fruity test to check reflection of foreign functions with data selectors

{-@ LIQUID "--reflection" @-}

module ReflExt05A where

import ReflExt05B

{-@ reflect calories @-}
